src/objects/sdfs__FormulaShare_Processed_Record_Share__c.object
<CustomObject>
    <fields>
        <fullName>sdfs__Access_Level__c</fullName>
        <label>Access Level</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__FormulaShare_Rule_Name__c</fullName>
        <label>FormulaShare Rule Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sdfs__Processed_Record__c</fullName>
        <label>Processed Record</label>
        <referenceTo>sdfs__FormulaShare_Record_Log__c</referenceTo>
        <relationshipLabel>Processed Record Shares</relationshipLabel>
        <relationshipName>FormulaShare_Processed_Record_Shares</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sdfs__Share_With__c</fullName>
        <label>Share With</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Shared_to_Role_or_Group__c</fullName>
        <label>Shared to Role or Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Shared_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FormulaShare_Processed_Record_Shares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sdfs__Sharing_Reason__c</fullName>
        <label>Sharing Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Status_Reason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sdfs__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FormulaShare Processed Record Share</label>
    <nameField>
        <displayFormat>PRS{00000000}</displayFormat>
        <label>Processed Record Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FormulaShare Processed Record Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>